Feature/#1430process funds (#1)
* added 2 new columns to the table settlementFile

* MOWDEV-1430 added 2 new columns to settlementFile

* removed the state column from post

* Removed rubbish automatically generated tests.

* Added empty circle config file in order to pass circle block without disabling it

* Manually reverted last commit.

* Added a potentially useful CircleCI config

* Corrected node version from 'stable' to 'lts'

* Cannot build docker in docker- changed build to use machine instead of docker
